# python-demo-project

./: .editorconfig  .env.example  .flake8  .pre-commit-config.yaml  MIGRATION.md  Makefile  README.md  SETUP.md  pylint_report.txt  pyproject.toml
.github/workflows/: tests.yml
src/demo_cli/: __init__.py  __main__.py  config.py  main.py
src/demo_cli/commands/: async_cmd.py  greet.py  info.py
tests/: test_async.py  test_commands.py  test_config.py  test_main.py
